@@ -6,7 +6,6 @@
  */
 package jp.co.future.uroborosql.dialect;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -23,7 +22,7 @@ public class MySqlDialect extends AbstractDialect {
 	 * 悲観ロックのErrorCode もしくは SqlState. MySQLの場合はErrorCodeで判定する.
 	 * <pre>ERROR 3572 (HY000): Statement aborted because lock(s) could not be acquired immediately and NOWAIT is set.</pre>
 	 */
-	private static final Set<String> pessimisticLockingErrorCodes = Collections.singleton("3572");
+	private static final Set<String> pessimisticLockingErrorCodes = Set.of("3572");
 
 	/**
 	 * コンストラクタ
