@@ -16,7 +16,6 @@ import java.sql.DriverManager;
 import java.time.Clock;
 import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -33,6 +32,7 @@ import jp.co.future.uroborosql.connection.DataSourceConnectionContext;
 import jp.co.future.uroborosql.connection.DataSourceConnectionSupplierImpl;
 import jp.co.future.uroborosql.connection.DefaultConnectionSupplierImpl;
 import jp.co.future.uroborosql.dialect.H2Dialect;
+import jp.co.future.uroborosql.enums.InsertsType;
 import jp.co.future.uroborosql.store.SqlResourceManagerImpl;
 import jp.co.future.uroborosql.utils.CaseFormat;
 import jp.co.future.uroborosql.utils.StringUtils;
@@ -153,11 +153,13 @@ public class UroboroSQLTest {
 			}
 
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-			assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(1));
 		}
 
 		try (var agent = config.agent()) {
-			assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(0));
 		}
 	}
 
@@ -229,7 +231,8 @@ public class UroboroSQLTest {
 		var checkSql = "select table_name from information_schema.tables where table_name = 'PRODUCT'";
 		try (var agent = config.agent()) {
 			agent.required(() -> {
-				assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+				assertThat(agent.queryWith(checkSql)
+						.collect().size(), is(0));
 				try {
 					var sqls = new String(
 							Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
@@ -243,8 +246,10 @@ public class UroboroSQLTest {
 					fail(e.getMessage());
 				}
 				insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-				assertThat(agent.query("example/select_product").collect().size(), is(2));
-				assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+				assertThat(agent.query("example/select_product")
+						.collect().size(), is(2));
+				assertThat(agent.queryWith(checkSql)
+						.collect().size(), is(1));
 			});
 		}
 
@@ -253,7 +258,8 @@ public class UroboroSQLTest {
 				.autoCommit(true)
 				.readOnly(true)
 				.transactionIsolation(Connection.TRANSACTION_READ_UNCOMMITTED))) {
-			assertThat(agent.queryWith(checkSql).collect().size(), is(0));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(0));
 			try {
 				var sqls = new String(
 						Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
@@ -267,8 +273,10 @@ public class UroboroSQLTest {
 				fail(e.getMessage());
 			}
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
-			assertThat(agent.query("example/select_product").collect().size(), is(2));
-			assertThat(agent.queryWith(checkSql).collect().size(), is(1));
+			assertThat(agent.query("example/select_product")
+					.collect().size(), is(2));
+			assertThat(agent.queryWith(checkSql)
+					.collect().size(), is(1));
 		}
 	}
 
@@ -288,7 +296,8 @@ public class UroboroSQLTest {
 
 			insert(agent, Paths.get("src/test/resources/data/setup", "testExecuteQuery.ltsv"));
 
-			agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
+			agent.query("example/select_product")
+					.param("product_id", List.of(0, 1))
 					.stream().forEach(m -> {
 						assertTrue(m.containsKey("productId"));
 						assertTrue(m.containsKey("productName"));
@@ -300,6 +309,19 @@ public class UroboroSQLTest {
 						assertTrue(m.containsKey("versionNo"));
 					});
 
+			agent.rollback();
+		}
+
+		assertEquals(new H2Dialect().getDatabaseName(), config.getDialect().getDatabaseName());
+	}
+
+	@Test
+	void builderWithInsertsType() throws Exception {
+		var config = UroboroSQL.builder("jdbc:h2:mem:" + this.getClass().getSimpleName(), "", "")
+				.setSqlAgentProvider(new SqlAgentProviderImpl().setDefaultInsertsType(InsertsType.BULK))
+				.build();
+		try (var agent = config.agent()) {
+			assertThat(agent.getInsertsType(), is(InsertsType.BULK));
 			agent.rollback();
 		}
 
